- implementação da busca dos dados através de uma API feita com NextJS

--- a/frontend/src/app/tasks/task-list-item/task-list-item.component.html
+++ b/frontend/src/app/tasks/task-list-item/task-list-item.component.html
@@ -6,7 +6,7 @@
 
 </div>
 <div>
-  <button type="button" [routerLink]="['/edit', task.id]" class="btn btn-primary mr-1">
+  <button type="button" [routerLink]="['/edit', task._id]" class="btn btn-primary mr-1">
     Alterar
   </button>
 </div>
