--- a/frontend/src/app/tasks/task-list/task-list.component.html
+++ b/frontend/src/app/tasks/task-list/task-list.component.html
@@ -12,7 +12,7 @@
 
   <ul class="list-group" *ngIf="tasks.length > 0" >
     <li class="list-group-item" *ngFor="let task of tasks">
-      <app-task-list-item [task]="task" class="task-item"></app-task-list-item>
+      <app-task-list-item [task]="task" class="task-item" (onDeleteTask)="onTaskDeleted(task)" ></app-task-list-item>
     </li>
   </ul>
 </section>
